--- a/src/css/style.css
+++ b/src/css/style.css
@@ -191,6 +191,14 @@ button {
   font-size: 1em;
 }
 
+/* Styles for product listing cards */
+.listing-card {
+  flex: 1 1 45%;
+  margin: 0.25em;
+  padding: 0.5em;
+  max-width: 250px;
+  text-align: center;
+}
 /* End product list card */
 
 .product-detail {
