Added the cart total

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -248,7 +248,12 @@ button {
   grid-row: 2;
   grid-column: 3;
 }
-
+.cart-total {
+  text-align: center;
+  margin: 1em;
+  font-size: 1.2em;
+  font-weight: bold;
+}
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
