Added css and updated the cart function to hide or show total if there are items in the cart.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -254,6 +254,9 @@ button {
   font-size: 1.2em;
   font-weight: bold;
 }
+.cart-footer-hide {
+  display: none;
+}
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
