--- a/src/css/style.css
+++ b/src/css/style.css
@@ -257,6 +257,70 @@ button {
 .cart-footer-hide {
   display: none;
 }
+/* Checkout Button */
+.cart-buttons-hide {
+  display: none;
+}
+#checkout-button {
+  margin-bottom: 1em;
+}
+/* Checkout Page Styles */
+.checkout {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 1rem;
+}
+.checkout form {
+  border: 1px solid var(--light-grey);
+  padding: 1.5rem;
+  background-color: #fff;
+}
+.checkout fieldset {
+  border: 1px solid var(--light-grey);
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+}
+.checkout legend {
+  padding: 0 0.5rem;
+  font-weight: bold;
+  color: var(--secondary-color);
+}
+.checkout label {
+  display: block;
+  margin-top: 0.75rem;
+  font-size: var(--small-font);
+}
+.checkout input {
+  width: 100%;
+  padding: 0.5em;
+  margin-top: 0.25rem;
+  border: 1px solid var(--light-grey);
+  font-size: 1em;
+}
+.checkout input:focus {
+  outline: none;
+  border-color: var(--primary-color);
+}
+.order-summary {
+  border: 1px solid var(--light-grey);
+  padding: 1.5rem;
+  background-color: #fafafa;
+}
+.order-summary h3 {
+  margin-bottom: 1rem;
+  border-bottom: 2px solid var(--primary-color);
+  padding-bottom: 0.5rem;
+}
+.order-summary p {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.25rem 0;
+}
+#total {
+  font-weight: bold;
+  font-size: var(--large-font);
+}
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
@@ -270,6 +334,20 @@ button {
   .cart-card {
     font-size: inherit;
     grid-template-columns: 150px auto 15%;
+  }
+}
+@media screen and (min-width: 700px) {
+  .checkout {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .checkout form {
+    flex: 2;
+  }
+
+  .order-summary {
+    flex: 1;
   }
 }
 
